potential fix for backgrounds being broken on mobile devices?

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -534,6 +534,11 @@ strong
 /* screen sizing */
 @media (max-width: 1250px)
 {
+	html
+	{
+		background-attachment: scroll;
+	}
+
 	body
 	{
 		padding: 0;
@@ -573,5 +578,10 @@ strong
 	#vignette
 	{
 		display: none;
+	}
+
+	.cutout
+	{
+		background-attachment: scroll;
 	}
 }
